--- a/pynotebook/OHTR.ipynb
+++ b/pynotebook/OHTR.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cv2.boundingRect(): this function of OpenCV is used to draw an approximate rectangle around the binary image. This function is used mainly to highlight the region of interest after obtaining contours from an image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -74,6 +81,40 @@
     "    return letters, image\n",
     "\n",
     "#plt.imshow(image)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cv.imread():loads an image from the specified file.\n",
+    "\n",
+    "cv.cvtColor():used to convert image from one colorspace to another.\n",
+    "\n",
+    "cv.COLOR_BGR2GRAY: converts from BGR to GRAY.\n",
+    "\n",
+    "cv.threshold(): is used to apply thresholding.\n",
+    "\n",
+    "cv.THRESH_BINARY: If pixel intensity is greater than the set threshold, value set to 255, else set to 0 (black).\n",
+    "cv.THRESH_BINARY_INV: Inverted or Opposite case of cv2.THRESH_BINARY.\n",
+    "\n",
+    "cv.dilate(): In this method the maximum pixel is calculated and is overlapped with an anchor resulting in the areas of bright regions grow in size and hence the image size increases. the size of an object in white shade or bright shade increases, while the size of an object in black shade or dark shade decreases.\n",
+    "\n",
+    "cv.findContours(): finds the contours of an image.\n",
+    "\n",
+    "cv.RETR_EXTERNAL: retrieves only the extreme outer contours.\n",
+    "\n",
+    "cv.CHAIN_APPROX_SIMPLE: returns only the endpoints that are necessary for drawing the contour line.\n",
+    "\n",
+    "cv.contourArea(): this method computes a contour area.\n",
+    "\n",
+    "cv.rectangle(): used to draw rectangles on any image.\n",
+    "\n",
+    "cv.THRESH_OTSU:  iterating through all the possible threshold values and calculating a measure of spread for the pixel levels each side of the threshold, i.e. the pixels that either fall in foreground or background.\n",
+    "\n",
+    "cv.resize(): used to resize the image\n",
+    "\n",
+    "cv.INTER_CUBIC:This uses bicubic interpolation for resizing the image. While resizing and interpolating new pixels, this method acts on the 4×4 neighboring pixels of the image. It then takes the weights average of the 16 pixels to create the new interpolated pixel."
    ]
   },
   {
